--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="짱구 - 프로필 링크">
         <meta property="og:description" content="어서와 코딩은 처음이지?">
-        <meta property="og:image" content="95 짱구테마/01짱구프로필.jfif">
+        <meta property="og:image" content="95 짱구테마/01짱구프로필.png">
         <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script> <!-- '</script>'가 빠짐 -->
         <title>르탄이 - 프로필 링크</title>
         <style>
@@ -24,7 +24,7 @@
                 border-radius: 100%;
                 border: 2px solid white;
                 
-                background-image: url('95 짱구테마/01짱구프로필.jfif');
+                background-image: url('95 짱구테마/01짱구프로필.png');
                 background-position: center;
                 background-size: cover;
            }
