--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:title" content="짱구 - 프로필 링크">
-        <meta property="og:description" content="어서와 코딩은 처음이지?">
+        <meta property="og:title" content="jyooung - 프로필 링크">
+        <meta property="og:description" content="지영이의 프로필 링크!">
         <meta property="og:image" content="01짱구프로필.png">
         <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script> <!-- '</script>'가 빠짐 -->
-        <title>르탄이 - 프로필 링크</title>
+        <title> - 프로필 링크</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             * {
@@ -84,12 +84,12 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">신짱구</h1>
-            <p class="sub">짱구는 못말려 !!</p>
-            <a target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
-            <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99</a>
-            <a target="_blank" href="https://chang.spartacodingclub.kr/">창업 부트캠프 창</a>
-            <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>
+            <h1 class="main">박지영</h1>
+            <p class="sub">개발 공부중!</p>
+            <a target="_blank" href="https://www.naver.com/">깃허브</a>
+            <a target="_blank" href="https://www.naver.com/">인스타그램</a>
+            <a target="_blank" href="https://www.naver.com/">카페</a>
+            <a target="_blank" href="https://www.naver.com/">블로그</a>
         </div>
     </body>
 </html>
